--- a/app/views/interpreters/add_availability.html.erb
+++ b/app/views/interpreters/add_availability.html.erb
@@ -1,3 +1,3 @@
-<%= turbo_frame_tag "availability_day_#{@index}" do %>
-  <%= render partial: "availability_form", locals: {availability: Availability.new(interpreter_id: @interpreter.id, wday: @index)} %>
+<%= turbo_frame_tag "add_availability" do %>
+  <%= render partial: "availability_form", locals: {availability: Availability.new(interpreter_id: @interpreter.id)} %>
 <% end %>
