--- a/app/views/shared/_interpreter_sidenav.html.erb
+++ b/app/views/shared/_interpreter_sidenav.html.erb
@@ -1,3 +1,4 @@
+<!-- To show this sidenav, add current controller to InterpreterPolicy whitelisted_controllers -->
 <% if policy(:interpreter).show_side_nav?(controller_name) %>
   <div class="relative z-40 md:hidden" role="dialog" aria-modal="true">
     <div class="fixed inset-0 bg-gray-600 bg-opacity-75"></div>
