--- a/app/views/interpreters/availability.html.erb
+++ b/app/views/interpreters/availability.html.erb
@@ -8,7 +8,7 @@
           <div class="p-8 bg-white rounded shadow">
             <div class="px-4 sm:px-6 lg:px-8 container">
               <div class="flex flex-wrap">
-                <div class="py-4">
+                <div>
                   <div>
                     <%= link_to update_timezone_view_interpreters_path, class: "mt-3 inline-flex w-full items-center justify-center rounded-lg border border-transparent bg-tokanisecondary-600 px-4 py-2 font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 sm:mt-0 sm:w-auto sm:text-sm", data: { turbo_frame: "update_timezone_view" } do %>
                       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
@@ -20,7 +20,7 @@
                   <%= turbo_frame_tag "update_timezone_view" %>
                   <%#= render partial: "availability_table", locals: {index: index} %>
                 </div>
-                <div class="py-4 ml-auto">
+                <div class="ml-auto">
                   <div class="text-right">
                     <%= link_to add_availability_interpreters_path, class: "mt-3 inline-flex w-full items-center justify-center rounded-lg border border-transparent bg-tokanisecondary-600 px-4 py-2 font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 sm:mt-0 sm:w-auto sm:text-sm", data: { turbo_frame: "add_availability" } do %>
                       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
