--- a/app/views/availabilities/_availability_row.html.erb
+++ b/app/views/availabilities/_availability_row.html.erb
@@ -1,24 +1,35 @@
 <tr id="<%= availability.id %>_form_wrapper" class= "">
+  <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
+    <%= availability_day(availability.wday) %>
+  </td>
   <td class="whitespace-nowrap py-4 pl-4 text-sm text-gray-500"><%= start_avail(availability) %></td>
   <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500"><%= end_avail(availability) %></td>
   <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
     <% if availability.in_person %>
-      <i class="fa-solid fa-square-check">
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 text-green-500">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+      </svg>
     <% end %>
   </td>
   <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
     <% if availability.phone %>
-      <i class="fa-solid fa-square-check">
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 text-green-500">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+      </svg>
     <% end %>
   </td>
   <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
     <% if availability.video %>
-      <i class="fa-solid fa-square-check">
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 text-green-500">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+      </svg>
     <% end %>
   </td>
   <td class="whitespace-nowrap px-3 py-4">
     <%= button_to url_for(controller: "availabilities", action: "destroy", id: availability.id), params: {'availability[interpreter_id]' => @interpreter.id}, method: :delete, class:"rounded-2 border-blueCoral me-2 mt-2" do %>
-      <i class="fa fa-xl fa-trash"></i>
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 text-red-500">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0" />
+      </svg>
     <% end %>
   </td>
 </tr>
