--- a/app/views/interpreters/_availability_form.html.erb
+++ b/app/views/interpreters/_availability_form.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= availability.id || "new_availability_#{availability.wday}" %>_form_wrapper" class="border rounded-3 border-coral border-2 mb-3 mt-3">
+<div id="new_availability_form_wrapper" class="border rounded-lg border-coral border-2 my-5">
 
   <%= form_with model: availability do |form| %>
 
@@ -9,21 +9,40 @@
     <%= form.hidden_field :wday %>
 
     <% if @notice %>
-      <div class="alert alert-danger alert-dismissible" id="<%= if availability.new_record? then "new_availability_#{availability.wday}" else availability.id end %>_notice" >
-        <span class="alert-text">
+      <div class="alert alert-danger alert-dismissible" id="new_availability_notice" >
+        <span class="alert-text text-green-500">
           <strong><%= @notice %></strong>
         </span>
       </div>
     <% end %>
 
-    <div id="new_availability_<%= availability.wday %>_notice"></div>
+    <div id="new_availability_notice"></div>
 
-    <div class="m-8">
-  		<h4 class="mb-3">Add Availability:</h4>
+    <div class="my-4 px-3">
+			<div data-controller="interpreters" clas="flex absolute">
+				<%= button_tag "#", data: { action: "interpreters#removeElement" }, type: "button", class: "relative bottom-3 left-3 p-1 float-right" do %>
+					<%= fa_icon("circle-xmark", class: "text-slate-400 h-5 flex m-auto") %>
+				<% end %>
+			</div>
+      <div class="week-days__container mb-3">
+        <p class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2">
+          *Week Day:
+        </p>
+        <div class="flex">
+          <% Availability::WDAY_MAPPING.each do |day_index, day_in_words| %>
+            <div class="ml-2 flex items-center">
+              <%= form.radio_button :wday, day_index, class: "mr-2" %>
+              <%= form.label "wday_#{day_index}", class: "text-sm", style: "margin-top:0.3rem;", title: "In-Person" do %>
+                <%= day_in_words %>
+              <% end %>
+            </div>
+          <% end %>
+        </div>
+      </div>
   		<div class="flex flex-wrap mb-2">
-  			<div class="w-1/3 md:w-1/3 px-3 mb-6 md:mb-0">
+  			<div class="w-1/3 md:w-1/3 mb-6 md:mb-0">
   				<label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="start-time">
-  					From:
+  					*Start From:
   				</label>
 
           <div class="grid grid-cols-2 gap-4">
@@ -33,7 +52,7 @@
   			</div>
   			<div class="w-1/3 md:w-1/3 px-3 mb-6 md:mb-0">
   				<label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="start-time">
-  					To:
+  					*To:
   				</label>
 
           <div class="grid grid-cols-2 gap-4">
@@ -41,37 +60,39 @@
             <div><%= select_tag 'times[finish][minute]', options_for_select((0..45).step(15).map {|i| [lpad_number(i), lpad_number(i) ]}, selected: lpad_number(availability.end_minute)), { id: dom_id(availability, 'times_end_minute') , class: "form-select"} %></div>
           </div>
   			</div>
-  			<div class="w-1/8 md:w-1/8 px-3 mb-6 md:mb-0">
-  				<label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="availability_in_person">
-  					In-Person:
-  				</label>
-  				<div class="flex h-5 mt-5 items-center">
-            <%= form.check_box :in_person,  class: "inline-blockh-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-500" %>
-  					<p class="ml-2"><i class="fa fa-person"></i></p>
-  				</div>
-  			</div>
-  			<div class="w-1/8 md:w-1/8 px-3 mb-6 md:mb-0">
-  				<label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="availability_phone">
-  					Phone:
-  				</label>
-  				<div class="flex h-5 mt-5 items-center">
-            <%= form.check_box :phone, class: "inline-blockh-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-500" %>
-  					<p class="ml-2"><i class="fa fa-phone"></i></p>
-  				</div>
-  			</div>
-  			<div class="w-1/8 md:w-1/8 px-3 mb-6 md:mb-0">
-  				<label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="availability_video">
-  					Video Call:
-  				</label>
-  				<div class="flex h-5 mt-5 items-center">
-            <%= form.check_box :video, class: "inline-blockh-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-500" %>
-  					<p class="ml-2"><i class="fa fa-video"></i></p>
-  				</div>
-  			</div>
-  			<div class="w-1/8 md:w-1/8 px-3 mb-6 md:mb-0 mt-8">
-  			 <button type="submit" class="mt-3 inline-flex w-full items-center justify-center rounded-none border border-transparent bg-indigo-600 px-4 py-2 font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">Add</button>
+				<div class="w-1/6 md:w-1/3 mb-6 md:mb-0">
+					<label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="start-time">
+						*Modality:
+					</label>
+					<div class="flex flex-wrap items-center">
+						<div class="flex flex-wrap items-center mr-3 pt-2">
+							<%= form.label :in_person, class: "text-sm", title: "In-Person" do %>
+								<p class="ml-2"><i class="fa fa-person"></i></p>
+							<% end %>
+							<%= form.check_box :in_person, class: "ml-2" %>
+						</div>
+						<div class="flex flex-wrap items-center mr-3 pt-2">
+							<%= form.label :phone, class: "text-sm", title: "Phone" do %>
+								<p class="ml-2"><i class="fa fa-phone"></i></p>
+							<% end %>
+							<%= form.check_box :phone, class: "ml-2" %>
+						</div>
+						<div class="flex flex-wrap items-center mr-3 pt-2">
+							<label for="in_person"></label>
+							<%= form.label :video, class: "text-sm", title: "Video Call" do %>
+								<p class="ml-2"><i class="fa fa-video"></i></p>
+							<% end %>
+							<%= form.check_box :video, class: "ml-2" %>
+						</div>
+					</div>
+				</div>
+				<div class="w-1/6 md:w-1/3 mb-6 md:mb-0">
+
   			</div>
   		</div>
+      <div class="w-full text-right">
+        <button type="submit" class="mt-3 inline-flex w-full items-center justify-center rounded-lg border border-transparent bg-tokanisecondary-600 px-4 py-2 font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 sm:mt-0 sm:w-auto sm:text-sm">Submit</button>
+      </div>
     </div>
   <% end %>
 </div>
