--- a/app/views/interpreters/_availability_table.html.erb
+++ b/app/views/interpreters/_availability_table.html.erb
@@ -1,34 +1,32 @@
-<div class="px-4 sm:px-6 lg:px-8 mb-4 border-t">
-  <div class="sm:flex sm:items-center">
-    <div class="sm:flex-auto">
-      <h1 class="text-xl font-semibold text-gray-900">Current Availability</h1>
-    </div>
-  </div>
-  <div class="mt-5 flex flex-col">
-    <div class="-my-2 -mx-4 overflow-x-auto sm:-mx-6 lg:-mx-8">
-      <div class="inline-block min-w-full py-2 align-middle md:px-6 lg:px-8">
-        <div class="overflow-hidden shadow ring-1 ring-black ring-opacity-5 md:rounded-lg">
-          <table class="min-w-full divide-y divide-gray-300">
-            <thead class="bg-gray-50">
-              <tr>
-                <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">From</th>
-                <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">To</th>
-                <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">In-Person</th>
-                <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Phone</th>
-								<th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Video Call</th>
-								<th scope="col" class="relative py-3.5 pl-3 pr-4 sm:pr-6">
-                  <span class="sr-only">Delete</span>
-                </th>
-              </tr>
-            </thead>
-            <tbody class="divide-y divide-gray-200 bg-white" id="interpreter_availabilities_table_<%= index %>">
-              <% @availabilities[index].try(:each) do |avail| %>
-                <%= render partial: 'availabilities/availability_row', locals: {availability: avail} %>
-              <% end %>
-            </tbody>
-          </table>
+<%= turbo_frame_tag "availabilities_table" do %>
+  <div class="px-4 sm:px-6 lg:px-8 my-4 bg-white shadow">
+    <div class="mt-5 flex flex-col">
+      <div class="-my-2 -mx-4 overflow-x-auto sm:-mx-6 lg:-mx-8">
+        <div class="inline-block min-w-full py-2 align-middle">
+          <div class="overflow-hidden shadow ring-1 ring-black ring-opacity-5 md:rounded-lg">
+            <table class="min-w-full divide-y divide-gray-300">
+              <thead class="bg-gray-50">
+                <tr>
+                  <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Week Day</th>
+                  <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">From</th>
+                  <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">To</th>
+                  <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">In-Person</th>
+                  <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Phone</th>
+                  <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Video Call</th>
+                  <th scope="col" class="relative py-3.5 pl-3 pr-4 sm:pr-6">
+                    <span class="sr-only">Delete</span>
+                  </th>
+                </tr>
+              </thead>
+              <tbody class="divide-y divide-gray-200 bg-white" id="interpreter_availabilities_table">
+                <% Array.wrap(availabilities).each do |avail| %>
+                  <%= render partial: 'availabilities/availability_row', locals: {availability: avail} %>
+                <% end %>
+              </tbody>
+            </table>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
+<% end %>
