--- a/app/views/interpreters/_interpreter.html.erb
+++ b/app/views/interpreters/_interpreter.html.erb
@@ -45,10 +45,13 @@
         <dt class="text-sm font-medium text-tokanisecondary-600">Drivers License</dt>
         <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"><%= interpreter.interpreter_detail.drivers_license %></dd>
       </div>
-      
-        
+
+      <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
+        <dt class="text-sm font-medium text-tokanisecondary-600">Languages</dt>
+        <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"><%= interpreter.languages_list %></dd>
       </div>
       
+
     </dl>
 
     
