--- a/app/views/shared/_account_navbar.html.erb
+++ b/app/views/shared/_account_navbar.html.erb
@@ -10,6 +10,14 @@
     <%= nav_link_to "Notifications", notification_settings_path, class: "block no-underline p-3 px-6", active_class: "bg-blue-600 text-white hover:text-white", inactive_class: "text-gray-700 hover:text-gray-700 hover:bg-gray-100", starts_with: "/notification_settings" %>
   <% end %>
 
+  <% if current_user.is_agency_admin? %>
+    <% if current_account.agency_detail.present? && !current_account.agency_detail.new_record? %>
+      <%= nav_link_to "Agency Details", agency_detail_path(current_account.agency_detail), class: "block no-underline p-3 px-6", active_class: "bg-blue-600 text-white hover:text-white", inactive_class: "text-gray-700 hover:text-gray-700 hover:bg-gray-100", starts_with: "/agency_details" %>
+    <% else %>
+      <%= nav_link_to "Agency Details", new_agency_detail_path, class: "block no-underline p-3 px-6", active_class: "bg-blue-600 text-white hover:text-white", inactive_class: "text-gray-700 hover:text-gray-700 hover:bg-gray-100", starts_with: "/agency_details" %>
+    <% end %>
+  <% end %>
+
   <%= nav_link_to t(".accounts"), accounts_path, class: "block no-underline p-3 px-6", active_class: "bg-blue-600 text-white hover:text-white", inactive_class: "text-gray-700 hover:text-gray-700 hover:bg-gray-100", starts_with: "/accounts" %>
   <% if current_user.interpreter_detail_filled_out? %>
     <%= nav_link_to t(".interpreter_details"), interpreter_detail_path(current_user.interpreter_detail), class: "block no-underline p-3 px-6", active_class: "bg-blue-600 text-white hover:text-white", inactive_class: "text-gray-700 hover:text-gray-700 hover:bg-gray-100", starts_with: "/interpreter_details" if policy(:interpreter).show_account_nav? %>
