--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -39,7 +39,7 @@
                         </div>
                       </div>
 
-                      <% if AppointmentPolicy.new(current_account, @appointment).show_appointment_customers? %>
+                      <% if AppointmentPolicy.new(current_account, @appointment, current_account_user).show_appointment_customers? %>
                         <div data-controller="dropdown" class="pr-3 relative">
                           <a data-action="click->dropdown#toggle click@window->dropdown#hide touch->dropdown#toggle touch@window->dropdown#hide" class="inline-flex items-center select-none" aria-label="Status">
                             <p class="text-sm capitalize" id="statusesTextContainer">Customer</p>
