--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -45,9 +45,14 @@
             <%= link_to t(".accounts"), accounts_path, class: 'block p-2 text-base font-medium text-gray-500 hover:text-gray-800 hover:bg-gray-100' %>
             <% if current_user.interpreter_detail_filled_out? %>
               <%= link_to t(".interpreter_details"), interpreter_detail_path(current_user.interpreter_detail), class: "no-underline block px-6 py-3 text-gray-800 bg-white  hover:bg-primary-50 transition ease-in-out duration-200 whitespace-nowrap" if policy(:interpreter).show_account_nav? %>
-            <% else%>
+            <% else %>
               <%= link_to t(".interpreter_details"), interpreter_details_path, class: "no-underline block px-6 py-3 text-gray-800 bg-white  hover:bg-primary-50 transition ease-in-out duration-200 whitespace-nowrap" if policy(:interpreter).show_account_nav? %>
             <% end %>
+
+            <% if current_user.is_interpreter? %>
+              <%= link_to "Checklist Items", interpreter_items_checklist_item_path(current_user), class: "no-underline block px-6 py-3 text-gray-800 bg-white  hover:bg-primary-50 transition ease-in-out duration-200 whitespace-nowrap" %>
+            <% end %>
+
             <% if current_user.admin? %>
               <%= link_to t(".admin"), admin_root_path, class: 'block p-2 text-base font-medium text-gray-500 hover:text-gray-800 hover:bg-gray-100', data: { turbo: false } %>
             <% end %>
@@ -78,6 +83,11 @@
                 <% else%>
                   <%= link_to t(".interpreter_details"), interpreter_details_path, class: "no-underline block px-6 py-3 text-gray-800 bg-white  hover:bg-primary-50 transition ease-in-out duration-200 whitespace-nowrap" if policy(:interpreter).show_account_nav? %>
                 <% end %>
+
+                <% if current_user.is_interpreter? %>
+                  <%= link_to "Checklist Items", interpreter_items_checklist_item_path(current_user), class: "no-underline block px-6 py-3 text-gray-800 bg-white  hover:bg-primary-50 transition ease-in-out duration-200 whitespace-nowrap" %>
+                <% end %>
+
                 <%#= link_to t(".api_tokens"), api_tokens_path, class: 'no-underline block px-6 py-3 text-gray-800 bg-white  hover:bg-primary-50 transition ease-in-out duration-200 whitespace-nowrap' if Jumpstart.config.payments_enabled? %>
                 <!--
                 <div class="px-6 py-3 text-xs font-bold text-gray-800 uppercase bg-white border-t border-gray-200">Accounts</div>
